--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <h1>Curriculum Vitae</h1>
 
-    <img src="./1_0605.png" style="width: 200px; height: auto" />
+    <img src="./asset/1_0605.png" style="width: 200px; height: auto" />
 
     <main>
       <section id="brief introduction">
@@ -61,7 +61,7 @@
         <h2>Contact</h2>
         <p> <strong>Video introduction </strong></p>
         <video width="320" height="240" controls>
-        <source src="0917(1)-1.m4v" type="video/mp4">
+        <source src="./asset/0917(1)-1.m4v" type="video/mp4">
           Your browser does not support the video tag.
           </video>
                   
