--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <!-- head is like a confid for web, cannot be seen -->
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href = "css/layout.css" rel = "stylesheet"/>
@@ -15,7 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Michroma&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
   </head>
-
+  
+  <!-- Content of the webpage -->
   <body>
     <nav>
       <ul class = "menu">
@@ -39,6 +41,7 @@
         <p> Hi, I am Khuong Duy, a sophomore majoring Software Engineering at RMIT University Vietnam. I have been a 3-year-experience art producer, but having an opportunity at the amazing RMIT Fintech Club, I have switched my career to be a blockchain developer.
         </p>
       </section>
+      
     </div>
 
       <section id="about">
@@ -49,6 +52,7 @@
         <p><strong> Ielts: </strong> 7</p>
         <p><strong> Address: </strong> Phu Nhuan, HCMC</p>
       </section>
+
       <section id="skill">
         <h2>Skill</h2>
         <p><strong> C </strong> ★★★★</p>
@@ -57,6 +61,17 @@
         <p><strong> Python </strong>★★★★</p>
         <p><strong> Rust </strong> ★★</p>
         <p><strong> Solidity </strong> ★★★★★</p>
+      </section>
+
+      <section id="Achievement">
+        <h2>Achievement</h2>
+        <h3>2024</h3>
+        <p><li> Champion of RMIT Emerging Leader Project </li> </p>
+        <p><li> Contestant of PwC Hackaday </li></p>
+        <p><li> Finalist of ASCIS cybersecurity competition </li></p>
+        <p><li> Top 30 RMIT Hackaventure </li></p>
+        <p><li> Producer/Art Director of TheGun CheerVerve Lookbook </li></p>
+        <p><li> FinTechTainment project MVP </li></p>
       </section>
 
       <section id="education">
