--- a/index.html
+++ b/index.html
@@ -64,14 +64,20 @@
       </section>
 
       <section id="Achievement">
-        <h2>Achievement</h2>
-        <h3>2024</h3>
+        <h2>Achievement - 2024</h2>
+        <h3>Competition</h3>
         <p><li> Champion of RMIT Emerging Leader Project </li> </p>
         <p><li> Contestant of PwC Hackaday </li></p>
         <p><li> Finalist of ASCIS cybersecurity competition </li></p>
         <p><li> Top 30 RMIT Hackaventure </li></p>
         <p><li> Producer/Art Director of TheGun CheerVerve Lookbook </li></p>
         <p><li> FinTechTainment project MVP </li></p>
+
+        <h3>Projects</h3>
+        <p><li> RMIT FinTech Club AI's Record </li> </p>
+        <p><li> SEED Program </li></p>
+        <p><li> Blockchain-enabled voting system </li></p>
+
       </section>
 
       <section id="education">
@@ -107,3 +113,4 @@
 </html>
 
 Art porfolio
+
